controllers/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  selector: {}
  ports:
  - port: {}
    targetPort: {}
